# gnome-commander

./: .cvsignore  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  BUGS  CONTRIBUTING.md  COPYING  Cargo.toml  ChangeLog  ChangeLog-20090629  Dockerfile  Doxyfile  INSTALL  INSTALL.md  MAINTAINERS  Makefile.am  NEWS  README  README.commits  README.in  README.md  RELEASE.gentoo.md  RELEASE.md  REUSE.toml  TODO  autogen.sh  build.rs  build_portable.py  check-news.sh  configure.ac  configure.in  gnome-commander.desktop  gnome-commander.desktop.in  gnome-commander.doap  gnome-commander.spec.in  gnome-doc-utils.make  meson.build  meson_options.txt  omf.make  (+2 more)
++/data/: Makefile.am  gnome-commander.desktop.in.in  gnome-commander.spec.in
data/: Makefile.am  gnome-commander-mime.xml  gnome-commander.appdata.xml.in  gnome-commander.desktop.in.in  gnome-commander.ebuild  gnome-commander.ebuild.in  gnome-commander.spec.in  libiptcdata.ebuild  meson.build  metadata.xml  org.gnome.gnome-commander.appdata.xml.in  org.gnome.gnome-commander.desktop.in  org.gnome.gnome-commander.desktop.in.in  org.gnome.gnome-commander.enums.xml  org.gnome.gnome-commander.gschema.xml  org.gnome.gnome-commander.metainfo.xml.in
doc/: ChangeLog  ChangeLog-20090629  LINGUAS  Makefile.am  advrename.txt  gnome-commander.1  gnome-commander.omf.in  internal_viewer_hacking.txt  keys.txt  meson.build  plugin-interface.md  tips_tricks.txt
doc/C/: Makefile.am  gnome-commander.sgml  gnome-commander.xml  index.docbook  legal.xml  releases.xml
doc/cs/: cs.po
doc/de/: de.po  legal.xml
doc/el/: el.po
doc/es/: es.po
doc/fr/: fr.po
doc/hu/: hu.po
doc/kk/: kk.po
doc/ru/: ru.po
doc/sl/: sl.po
doc/sr/: sr.po
doc/sv/: sv.po
gcmd-component-framework/: Cargo.toml
gcmd-component-framework-macros/: Cargo.toml
gcmd-component-framework-macros/src/: action_list.rs  lib.rs
gcmd-component-framework/src/: component.rs  container.rs  controller.rs  lib.rs  prelude.rs  sender.rs  widget.rs
gnome-commander/: Cargo.toml  build.rs  meson.build
gnome-commander/src/: application.css  application.rs  chown_component.rs  command_line.rs  config.rs  connection_bar.rs  connection_button.rs  dir.rs  directory_indicator.rs  dirlist.rs  file.rs  file_metainfo_view.rs  file_selector.rs  file_view.rs  filter.rs  i18n.rs  main.rs  main_win.rs  open_file.rs  pwd.rs  shortcuts.rs  spawn.rs  transfer.rs  types.rs  user_actions.rs  utils.rs  weak_map.rs  weak_set.rs
libgcmd/: Makefile.am  gnome-cmd-configurable.c  gnome-cmd-configurable.h  gnome-cmd-dialog.c  gnome-cmd-dialog.cc  gnome-cmd-dialog.h  gnome-cmd-file-actions.c  gnome-cmd-file-actions.h  gnome-cmd-file-base.c  gnome-cmd-file-base.cc  gnome-cmd-file-base.h  gnome-cmd-file-descriptor.c  gnome-cmd-file-descriptor.h  gnome-cmd-file-info.c  gnome-cmd-file-info.cc  gnome-cmd-file-info.h  gnome-cmd-file-metadata-extractor.c  gnome-cmd-file-metadata-extractor.h  gnome-cmd-plugin-info.h  gnome-cmd-plugin.c  gnome-cmd-plugin.cc  gnome-cmd-plugin.h  gnome-cmd-state.c  gnome-cmd-state.h  gnome-cmd-string-dialog.c  gnome-cmd-string-dialog.cc  gnome-cmd-string-dialog.h  libgcmd-data.c  libgcmd-data.cc  libgcmd-data.h  libgcmd-deps.h  libgcmd-utils.c  libgcmd-utils.cc  libgcmd-utils.h  libgcmd-widget-factory.c  libgcmd-widget-factory.cc  libgcmd-widget-factory.h  libgcmd.h  meson.build  plugin-info.h
pixmaps/: Makefile.am  copy_file_names.xpm  exec_wheel.xpm  ftp_connect.xpm  ftp_disconnect.xpm  gcmd-icon1.xcf  gcmd-icon1.xpm  gcmd-icon3.xpm  gnome-commander-flip-horizontal.xpm  gnome-commander-rotate-180.xpm  gnome-commander-rotate-270.xpm  gnome-commander-rotate-90.xpm  gnome-commander.xpm  home.xpm  key.xpm  menu_bookmark.xpm  menu_ftp_connect.xpm  menu_ftp_disconnect.xpm  meson.build  mkdir.xpm  parent_dir.xpm  smb-network.xpm  toggle_vertical.xpm
pixmaps/device-icons/: Makefile.am  burner.xpm  floppy.xpm  ipod.xpm  meson.build  pci.xpm  removable.xpm  usb.xpm  wavelan.xpm  zip.xpm
pixmaps/file-type-icons/: Makefile.am  file_type_block_device.xpm  file_type_dir.xpm  file_type_dir_green.xpm  file_type_dir_orange.xpm  file_type_dir_red.xpm  file_type_fifo.xpm  file_type_regular.xpm  file_type_socket.xpm  file_type_symlink_to_dir_green.xpm  file_type_symlink_to_dir_orange.xpm  file_type_symlink_to_dir_red.xpm  file_type_unknown.xpm  meson.build
pixmaps/mime-icons/: Makefile.am  meson.build
plugins/: Makefile.am  archives.py  document-metadata.py  image-metadata.py  menu-scripts.py  meson.build  multimedia-metadata.py  plugin_common.py  plugin_helper.py  test.py
plugins/cvs/: Makefile.am  callbacks.c  callbacks.h  close.xpm  cvs-plugin.c  cvs-plugin.cc  cvs-plugin.h  interface.c  (+6 more)
po/: ChangeLog  ChangeLog-20090629  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  ga.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  meson.build  mr.po  nb.po  ne.po  nl.po  no.po  oc.po  pa.po  (+19 more)
src/: Makefile.am  advanced_rename_lexer.rs  advrename_profile_component.rs  app.rs  application.css  application.rs  block.c  block.cc  cap.c  cap.cc  cap.h  chmod_component.rs  chown_component.rs  command_line.rs  components.rs  config.rs  config.rs.in  connection_bar.rs  connection_button.rs  data.rs  debug.rs  dict.cc  dict.h  dir.rs  directory_indicator.rs  dirlist.c  dirlist.cc  dirlist.h  dirlist.rs  eggaccelerators.cc  eggaccelerators.h  eggcellrendererkeys.cc  eggcellrendererkeys.h  file.rs  file_edit.rs  file_list.rs  file_list_actions.rs  file_list_popup.rs  file_metainfo_view.rs  file_selector.rs  (+294 more)
tests/: Makefile.am  gcmd_tests_main.cc  iv_bm_byte_test.cc  iv_bm_byte_test.h  iv_bm_search_test.cc  iv_bm_search_test.h  iv_datapresentation.cc  iv_datapresentation_test.cc  iv_dualrenderer_test.cc  iv_fileops.cc  iv_fileops.h  iv_fileops_test.cc  iv_fileops_test.h  iv_imagerenderer_test.cc  iv_imagerenderer_test.h  iv_inputmodes_test.cc  iv_textrenderer_test.cc  iv_utils_test.cc  iv_viewerwidget_test.cc  meson.build  plugins.rs  utils_no_dependencies_tests.cc
(+668 files in other folders)
