[package]
name = "gnome-commander"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
async-channel = "2.3.1"
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
gtk = { package = "gtk4", version = "0.10", features = ["gnome_46"] }
glib = { version = "0.21", features = ["v2_80"] }
libc = "0.2.155"
tempfile = "3.11.0"
strum = { version = "0.27", features = ["derive"] }
async-recursion = "1.1.1"
winnow = "0.7"
indexmap = "2.7.1"
futures = "0.3.31"
unicode-segmentation = "1.12.0"
regex = "1.11.1"
glob = "0.3.2"
memmap2 = "0.9.7"
bimap = "0.6.3"
grep = "0.4.1"
walkdir = "2.5.0"
vte = { package = "vte4", version = "0.9.0", features = ["v0_76"] }

[build-dependencies]
system-deps = "7"

[package.metadata.system-deps.gmodule_2_0]
name = "gmodule-2.0"
version = "2"

[dev-dependencies]
rusty-fork = "0.3.0"

[profile.test]
rpath = true

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.clippy]
new_without_default = "allow"
