[package]
name = "gnome-commander"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
async-broadcast = "0.7.2"
async-channel = "2.3.1"
async-io = "2.6.0"
async-process = "2.5.0"
async-recursion = "1.1.1"
bimap = "0.6.3"
futures = "0.3.31"
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
glib = { version = "0.22", features = ["v2_80"] }
glob = "0.3.2"
grep = "0.4.1"
gtk = { package = "gtk4", version = "0.11", features = ["gnome_46"] }
indexmap = "2.7.1"
libc = "0.2.155"
memmap2 = "0.9.7"
pin-project = "1.1.13"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.11.0"
tokio = { version = "1.52.3", features = ["sync"] }
unicode-segmentation = "1.12.0"
vte = { package = "vte4", version = "0.10.0", features = ["v0_76"] }
winnow = "0.7"

[build-dependencies]
system-deps = "7"

[package.metadata.system-deps.gmodule_2_0]
name = "gmodule-2.0"
version = "2"

[dev-dependencies]
async-std = { version = "1.13.2", features = ["attributes"] }
rusty-fork = "0.3.0"
tempfile = "3.11.0"

[profile.test]
rpath = true

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.clippy]
new_without_default = "allow"
